--- a/frontend/static/partials/_variables.scss
+++ b/frontend/static/partials/_variables.scss
@@ -1,7 +1,7 @@
 // colors
 
 $color-1: #37474f; // Ebony
-$color-2: #eebb00; // Corn
+$color-2: #f64235; // Corn
 $color-3: #ebebeb; // Gallery
 $color-4: rgba(0,0,0,0.870588); // Grey
 $color-5: #ffffff; // White
