--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -23,7 +23,7 @@
 	<div class="cd-intro-block">
         <div id="video-landing">
             <video preload loop id="video_bg" muted class="video-js vjs-default-skin" width="100%" height="100%" poster="http://video-js.zencoder.com/oceans-clip.png"   data-setup=''>
-                <source src="../video/background.mp4" type='video/mp4' />
+                <source src="../static/video/background.mp4" type='video/mp4' />
             </video>
         </div>
         <div id="overlay"></div>
