--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -47,7 +47,7 @@
 	<div class="cd-projects-wrapper">
 		<ul class="cd-slider">
 		<!-- For each -->
-			{% for file in file %}
+			{% for file in files %}
 				{% if id == 1 %}
 					<li class="current"> <!-- first need a class current, others don't -->
 				{% else %}
