--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -55,7 +55,7 @@
 					<li>
 				{% end %}
 					<a href="#video-{{id}}"> <!-- #video-{{id}} -->
-						<img src="../static/img/thumb.jpg" alt="project image"> 
+						<img src="{{ file }}.jpg" alt="project image"> 
 						<div class="project-info">
 							<h2>Project 1</h2>
 							<p>Lorem ipsum dolor sit amet.</p>
@@ -79,8 +79,8 @@
     {% for file in files %}
 		<div class="cd-project-content" id="video-{{id}}"> <!-- id="video-{{id}}" -->
 			<div>
-				<video id="player-{{id}}" class="video-js vjs-default-skin" controls preload="none" width="100%" height="100%" poster="http://video-js.zencoder.com/oceans-clip.png" data-setup="{}"> <!-- poster = thumbnail  || id="player-{{id}}" -->
-	                <source src="{{ file }}" type='video/mp4' /> <!-- URL video MP4 -->
+				<video id="player-{{id}}" class="video-js vjs-default-skin" controls preload="none" width="100%" height="100%" poster="{{ file }}.jpg" data-setup="{}"> <!-- poster = thumbnail  || id="player-{{id}}" -->
+	                <source src="{{ file }}.mp4" type='video/mp4' /> <!-- URL video MP4 -->
 	            </video>
 
 			</div>
