--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -58,7 +58,7 @@
 						<img src="/static/video/{{ file }}.jpg" alt="project image"> 
 						<div class="project-info">
 							<h2>{{ file }}</h2>
-							<p>Lorem ipsum dolor sit amet.</p>
+							<p>{{ file }}</p>
 						</div>
 					</a>
 				</li>
