--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -30,6 +30,7 @@ Patterns - reusable parts of our design
 .cd-btn {
   display: inline-block;
   padding: 1.4em 2em;
+  margin-bottom: 20px;
   border-radius: 50em;
   background-color: #f64235;
   box-shadow: 0 1px 20px rgba(246, 66, 53, 0.2), inset 0 1px 0 rgba(255, 255, 255, 0.4);
@@ -706,6 +707,7 @@ fontawesome
 
 #video-landing {
   position: fixed;
+    overflow: hidden;
   top: 0;
   left: 0;
   width: 100%;
