--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -33,7 +33,7 @@
 			<h1>Optimus Video</h1>
 			<a href="#0" class='cd-btn' data-action="show-projects">View my Videos</a>
             <!--<a href="#"><img src="../static/img/appstore.png"></a>--><br>
-            <a href="/demo.apk" style="padding-top:20px;"><img src="../static/img/playstore.png"></a>
+            <a href="/static/demo.apk" style="padding-top:20px;"><img src="../static/img/playstore.png"></a>
             <div id="social-media">
                 <ul>
                     <li class="social-icon fb"><a href=""><i class="fa icon-facebook"></i></a></li>
