--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -36,10 +36,10 @@
             <a href="/static/demo.apk" style="padding-top:20px;"><img src="../static/img/playstore.png"></a>
             <div id="social-media">
                 <ul>
-                    <li class="social-icon fb"><a href=""><i class="fa icon-facebook"></i></a></li>
-                    <li class="social-icon tw"><a href=""><i class="fa icon-twitter"></i></a></li>
-                    <li class="social-icon vk"><a href=""><i class="fa icon-vkontakte"></i></a></li>
-                    <li class="social-icon github"><a href=""><i class="fa icon-github"></i></a></li>
+                    <li class="social-icon fb"><a href="https://www.facebook.com/optimus.website"><i class="fa icon-facebook"></i></a></li>
+                    <li class="social-icon tw"><a href="#"><i class="fa icon-twitter"></i></a></li>
+                    <li class="social-icon vk"><a href="http://vk.com/optimus.website"><i class="fa icon-vkontakte"></i></a></li>
+                    <li class="social-icon github"><a href="#"><i class="fa icon-github"></i></a></li>
                 </ul>
             </div>
 		</div>
