--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -8,13 +8,13 @@
 
 	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,700,400italic' rel='stylesheet' type='text/css'>
 
-	<link rel="stylesheet" href="../static/css/reset.css"> <!-- CSS reset -->
-	<link rel="stylesheet" href="../static/css/style.css"> <!-- Resource style -->
-    <link rel="stylesheet" href="../static/css/video-js.css"> <!-- Resource style -->
-    <script src="../static/css/bigvideo.css"></script>
-	<script src="../static/js/modernizr.js"></script> <!-- Modernizr -->
+	<link rel="stylesheet" href="/static/css/reset.css"> <!-- CSS reset -->
+	<link rel="stylesheet" href="/static/css/style.css"> <!-- Resource style -->
+    <link rel="stylesheet" href="/static/css/video-js.css"> <!-- Resource style -->
+    <script src="/static/css/bigvideo.css"></script>
+	<script src="/static/js/modernizr.js"></script> <!-- Modernizr -->
   	<!-- video.js HTML5 Video Player -->
-    <script src="../static/js/video.js"></script>
+    <script src="/static/js/video.js"></script>
 
     <!-- video.js SWF Video Player -->
     <script>
@@ -90,10 +90,10 @@
 	{% end %}
    <!-- end foreach-->
     
-<script src="../static/js/jquery-2.1.4.js"></script>
-<script src="../static/js/jquery.mobile.custom.min.js"></script>
-<script src="../static/js/bigvideo.js"></script>
-<script src="../static/js/main.js"></script> <!-- Resource jQuery -->
+<script src="/static/js/jquery-2.1.4.js"></script>
+<script src="/static/js/jquery.mobile.custom.min.js"></script>
+<script src="/static/js/bigvideo.js"></script>
+<script src="/static/js/main.js"></script> <!-- Resource jQuery -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
