--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -18,7 +18,7 @@
 
     <!-- video.js SWF Video Player -->
     <script>
-        videojs.options.flash.swf = "video-js.swf";
+        videojs.options.flash.swf = "static/video-js.swf";
     </script>
     
 	<title>Optimus Video - save safe your videos</title>
