--- a/frontend/static/partials/_variables.scss
+++ b/frontend/static/partials/_variables.scss
@@ -5,7 +5,11 @@ $color-2: #f64235; // Corn
 $color-3: #ebebeb; // Gallery
 $color-4: rgba(0,0,0,0.870588); // Grey
 $color-5: #ffffff; // White
+$color-6: #5e6e8d; // blue
 
+$main-text: #8f9cb5; // main text
+$link: #35a785; // anchor tags
+$background: #ffd88f; // body background color
 // fonts 
 
 $primary-font: 'Source Sans Pro', sans-serif;
