--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -8,6 +8,8 @@
 
 	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,700,400italic' rel='stylesheet' type='text/css'>
 
+	<link rel="icon" href="/static/favicon.png">
+
 	<link rel="stylesheet" href="/static/css/reset.css"> <!-- CSS reset -->
 	<link rel="stylesheet" href="/static/css/style.css"> <!-- Resource style -->
     <link rel="stylesheet" href="/static/css/video-js.css"> <!-- Resource style -->
@@ -30,6 +32,13 @@
         </div>
         <div id="overlay"></div>
 		<div class="content-wrapper">
+		    <a href="#0" class="cd-popup-trigger">About Us</a>
+			<div class="cd-popup" role="alert">
+				<div class="cd-popup-container">
+					<p>Optimus Video simply writes your video to server. It doesn't matter if your phone will be broken. Video will be on server anyway.</p>
+					<a href="#0" class="cd-popup-close img-replace">Close</a>
+				</div> <!-- cd-popup-container -->
+			</div> <!-- cd-popup -->
 			<h1>Optimus Video</h1>
 			<a href="#0" class='cd-btn' data-action="show-projects">View Videos</a>
             <!--<a href="#"><img src="../static/img/appstore.png"></a>--><br>
