--- a/frontend/static/scss/style.scss
+++ b/frontend/static/scss/style.scss
@@ -627,3 +627,80 @@ fontawesome
     z-index: -1;
     background-color: rgba(0,0,0,0.4)
 }
+
+.cd-popup {
+	position: fixed;
+	left: 0;
+	top: 0;
+	height: 100%;
+	width: 100%;
+	background-color: rgba($color-6, .9);
+
+	opacity: 0;
+	visibility: hidden;
+	@include transition(opacity .3s 0s, visibility 0s .3s);
+
+	&.is-visible {
+		opacity: 1;
+		visibility: visible;
+		@include transition(opacity .3s 0s, visibility 0s 0s);
+	}
+}
+
+.cd-popup-container {
+	position: relative;
+	width: 90%;
+	max-width: 400px;
+	margin: 4em auto;
+	background: #FFF;
+	border-radius: .25em .25em .4em .4em;
+	text-align: center;
+	box-shadow: 0 0 20px rgba(#000, .2);
+
+	@include transform(translateY(-40px));
+	/* Force Hardware Acceleration in WebKit */
+	-webkit-backface-visibility: hidden;
+
+	@include transition-property (transform);
+	@include transition-duration(.3s);
+
+	p {
+		padding: 3em 1em;
+	}
+
+	.cd-popup-close {
+		position: absolute;
+		top: 8px;
+		right: 8px;
+		width: 30px;
+		height: 30px;
+
+		&::before, &::after {
+			content: '';
+			position: absolute;
+			top: 12px;
+			width: 14px;
+			height: 3px;
+			background-color: $main-text;
+		}
+
+		&::before {
+			@include transform(rotate(45deg));
+			left: 8px;
+		}
+
+		&::after {
+			@include transform(rotate(-45deg));
+			right: 8px;
+		}
+	}
+
+	.is-visible & {
+		@include transform(translateY(0));
+	}
+
+	@include MQ(L) {
+		margin: 8em auto;
+	}
+}
+
