--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -8,7 +8,7 @@
 
 	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,700,400italic' rel='stylesheet' type='text/css'>
 
-	<link rel="icon" href="/static/favicon.png">
+	<link rel="icon" href="/static/favicon.ico">
 
 	<link rel="stylesheet" href="/static/css/reset.css"> <!-- CSS reset -->
 	<link rel="stylesheet" href="/static/css/style.css"> <!-- Resource style -->
