--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -150,6 +150,7 @@ Projects Slider
   width: 100%;
   height: 100%;
   visibility: hidden;
+  overflow: hidden;
   background-color: #37474f;
   -webkit-transition: visibility 0s 0.5s;
   -moz-transition: visibility 0s 0.5s;
@@ -559,6 +560,7 @@ Project content panel
   width: 100%;
   height: 100%;
   visibility: hidden;
+  overflow: hidden;
   background-color: #37474f;
   padding: 32px 0 0 0;
   /* Force Hardware Acceleration */
