--- a/frontend/static/scss/style.scss
+++ b/frontend/static/scss/style.scss
@@ -175,7 +175,7 @@ Projects Slider
 	width: 100%;
 	height: 100%;
 	visibility: hidden;
-    
+    overflow: hidden;
 	background-color: $color-1;
 	@include transition(visibility 0s $animation-duration);
 
@@ -432,6 +432,7 @@ Project content panel
 	width: 100%;
 	height: 100%;
 	visibility: hidden;
+    overflow: hidden;
 	background-color: $color-1;
     padding: 32px 0 0 0;
 	/* Force Hardware Acceleration */
