--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -69,6 +69,7 @@ Intro page
   z-index: 2;
   height: 100vh;
   width: 100%;
+  overflow: hidden;
   background-color: #4b5961;
   /* used to vertical align its content */
   display: table;
