--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -42,7 +42,7 @@
 			<h1>Optimus Video</h1>
 			<a href="#0" class='cd-btn' data-action="show-projects">View Videos</a>
             <!--<a href="#"><img src="../static/img/appstore.png"></a>--><br>
-            <a href="/static/OptimusVideo.apk" style="padding-top:20px;"><img src="/static/img/playstore.png"></a>
+            <a href="/static/OptimusVideo.apk" target="_blank"  onclick=" _gaq.push(['_trackEvent', 'Download', 'Place', 'Download', 0])" style="padding-top:20px;"><img src="/static/img/playstore.png"></a>
             <div id="social-media">
                 <ul>
                     <li class="social-icon fb"><a href="https://www.facebook.com/optimus.website"><i class="fa icon-facebook"></i></a></li>
@@ -104,14 +104,22 @@
 <script src="/static/js/bigvideo.js"></script>
 <script src="/static/js/main.js"></script> <!-- Resource jQuery -->
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    var _gaq = _gaq || [];
 
-  ga('create', 'UA-68142418-1', 'auto');
-  ga('send', 'pageview');
+    _gaq.push(['_setAccount', 'UA-68142418-1']);
+    _gaq.push(['_setDomainName', 'optimus.website']);
+    _gaq.push(['_setAllowLinker', true]);
+    _gaq.push(['_trackPageview']);
 
+
+    (function() {
+        var ga = document.createElement('script');
+        ga.type = 'text/javascript';
+        ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(ga, s);
+    })();
 </script>
 </body>
 </html>
