--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -42,7 +42,7 @@
 			<h1>Optimus Video</h1>
 			<a href="#0" class='cd-btn' data-action="show-projects">View Videos</a>
             <!--<a href="#"><img src="../static/img/appstore.png"></a>--><br>
-            <a href="/static/OptimusVideo.apk" target="_blank"  onclick=" _gaq.push(['_trackEvent', 'Download', 'Place', 'Download', 0])" style="padding-top:20px;"><img src="/static/img/playstore.png"></a>
+            <a href="/static/OptimusVideo.apk" target="_blank"  onclick=" _gaq.push(['_trackEvent', 'Download', 'Success Download', 'Downloaded', 0])" style="padding-top:20px;"><img src="/static/img/playstore.png"></a>
             <div id="social-media">
                 <ul>
                     <li class="social-icon fb"><a href="https://www.facebook.com/optimus.website"><i class="fa icon-facebook"></i></a></li>
