--- a/android/OptimusVideo/app/src/main/res/layout/activity_main.xml
+++ b/android/OptimusVideo/app/src/main/res/layout/activity_main.xml
@@ -1,53 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#00F222"
-    android:theme="@style/NoTitle">
+    android:layout_height="match_parent">
+
 
     <net.majorkernelpanic.streaming.gl.SurfaceView
         android:id="@+id/surface"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <RelativeLayout
-        android:id="@+id/debug_layout"
+    <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-
-
-        <EditText
-            android:id="@+id/editText1"
+        <RelativeLayout
+            android:id="@+id/debug_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="destination"
-            android:text="192.168.43.9" />
+            android:background="#55FFFFFF"
+            android:visibility="gone">
 
-        <Button
-            android:id="@+id/switch_camera"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/editText1"
-            android:text="switch camera"
-            />
 
-        <TextView
-            android:id="@+id/text"
+            <EditText
+                android:id="@+id/editText1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="destination"
+                android:text="95.85.51.214" />
+
+            <TextView
+                android:id="@+id/text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="aDSASD"
+                android:textIsSelectable="true" />
+
+        </RelativeLayout>
+    </ScrollView>
+
+    <RelativeLayout
+        android:layout_width="100dp"
+        android:id="@+id/right_bar"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:background="#66FFFFFF">
+
+        <ImageButton
+            android:id="@+id/start_button"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/switch_camera"
-            android:text="aDSASD" />
+            android:layout_height="100dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerInParent="true"
+            android:background="@android:color/transparent"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_cam_inactive" />
 
+        <ProgressBar
+            android:id="@+id/progress"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_centerInParent="true"
+            android:visibility="gone" />
     </RelativeLayout>
 
-    <Button
-        android:id="@+id/start_button"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:text="start" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:id="@+id/status"
+        android:text="Hello"
+        android:layout_toLeftOf="@id/right_bar"
+        android:layout_alignParentLeft="true"
+        android:background="#66000000"
+        android:layout_height="wrap_content" />
 
+    <Button
+        android:id="@+id/switch_camera"
+        android:layout_below="@id/status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="switch camera" />
 
 </RelativeLayout>
