--- a/android/OptimusVideo/app/src/main/res/values/styles.xml
+++ b/android/OptimusVideo/app/src/main/res/values/styles.xml
@@ -1,11 +1,11 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat">
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="NoTitle" parent="android:Theme.Holo.Light.NoActionBar.Fullscreen">
+    <style name="NoTitle" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowActionBar">false</item>
     </style>
 
